# es-entity

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  bacon.toml  deny.toml  flake.nix  instructions.txt  notes
.github/workflows/: deploy-book.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  aggregates.md  api-reference.md  architecture.md  basic-usage.md  clock.md  commit-hooks.md  connection-traits.md  database-tables.md  db-op.md  entity-event.md  entity-pattern.md  entity-type.md  entity.md  es-query.md  es-repo.md  es_query.md  event-sourcing.md  features.md  forgettable.md  getting-started.md  idempotency.md  introduction.md  nesting-alt.md  nesting.md  new-entity.md  quickstart.md  repo-create-all.md  repo-create.md  repo-delete.md  repo-errors.md  repo-find-all.md  repo-find-by.md  repo-find-many.md  repo-hooks.md  repo-list-by.md  repo-list-for-filter.md  repo-list-for-filters.md  repo-list-for.md  repo-update-all.md  (+4 more)
ci/: pipeline.yml  repipe  values.yml  vendir.yml
ci/tasks/: publish-to-crates.sh  set-dev-version.sh  update-repo.sh
es-entity-macros/: Cargo.toml
es-entity-macros-sqlite/: Cargo.toml
es-entity-macros-sqlite/src/: entity.rs  lib.rs  retry_on_concurrent_modification.rs
es-entity-macros-sqlite/src/query/: input.rs  mod.rs
es-entity-macros-sqlite/src/repo/: begin.rs  create_all_fn.rs  create_fn.rs  delete_fn.rs  find_all_fn.rs  find_by_fn.rs  list_by_fn.rs  list_for_fn.rs  nested.rs  persist_events_batch_fn.rs  persist_events_fn.rs  populate_nested.rs  post_persist_hook.rs  update_all_fn.rs  update_fn.rs
es-entity-macros-sqlite/src/repo/options/: columns.rs  delete.rs
es-entity-macros/src/: entity.rs  es_event_context.rs  event.rs  lib.rs  retry_on_concurrent_modification.rs
es-entity-macros/src/query/: input.rs  mod.rs
es-entity-macros/src/repo/: begin.rs  combo_cursor.rs  create_all_fn.rs  create_fn.rs  delete_fn.rs  error_types.rs  find_all_fn.rs  find_by_fn.rs  find_many.rs  forget_fn.rs  list_by_fn.rs  list_for_filter_fn.rs  list_for_filters_fn.rs  list_for_fn.rs  mod.rs  nested.rs  persist_events_batch_fn.rs  persist_events_fn.rs  populate_nested.rs  post_hydrate_hook.rs  post_persist_hook.rs  update_all_fn.rs  update_fn.rs
es-entity-macros/src/repo/options/: columns.rs  mod.rs
es-entity-time/: Cargo.toml
es-entity-time/src/: artificial.rs  config.rs  controller.rs  global.rs  handle.rs  inner.rs  lib.rs  realtime.rs  simulated.rs  sleep.rs  transaction.rs
es-entity-time/tests/: clock_tests.rs
migrations/: 20250718092455_test_setup.sql  20250729102610_create_test_users_table.sql  20250730052502_create_customer_and_test_customers_table.sql.sql  20260227000000_forgettable_test_setup.sql  20260424000000_add_tasks_table.sql  20260714000000_forgettable_columns_test.sql
migrations-sqlite/: 20250718092455_test_setup.sql
sim-time/: Cargo.toml
sim-time/src/: config.rs  lib.rs
src/: annotating_executor.rs  context.rs  crypto_shred.rs  db.rs  error.rs  events.rs  forgettable.rs  idempotent.rs  lib.rs  macros.rs  nested.rs  one_time_executor.rs  operation.rs  pagination.rs  query.rs  sql_commenter.rs  traits.rs
src/clock/: artificial.rs  config.rs  controller.rs  global.rs  handle.rs  inner.rs  manual.rs  mod.rs  realtime.rs  sleep.rs
src/context/: id.rs  mod.rs  sqlx.rs  tracing.rs  with_es_context.rs  with_event_context.rs
src/operation/: hooks.rs  mod.rs  with_time.rs
tests/: async.rs  clock.rs  context.rs  copy.rs  customer.rs  customer_with_id_ty.rs  es_query.rs  es_query_entity_ty_repo.rs  es_query_id_ty_repo.rs  es_query_prefix_repo.rs  es_query_repo_entity_ty.rs  es_query_repo_entity_ty_id_ty.rs  es_query_repo_entity_ty_id_ty_prefix.rs  es_query_repo_entity_ty_prefix.rs  es_query_repo_id_ty.rs  es_query_repo_id_ty_prefix.rs  es_query_repo_prefix.rs  forgettable.rs  forgettable_columns.rs  forgettable_json_schema.rs  forgettable_nested.rs  from_async_trait.rs  helpers.rs  hooks.rs  in_op.rs  nested_entities.rs  op.rs  option_column_filter.rs  optional_column.rs  proptest_events.rs  proptest_idempotency.rs  repo.rs  repo_bulk.rs  repo_clock.rs  repo_crud.rs  repo_errors.rs  repo_hooks.rs  repo_test.rs  trace_annotation.rs  transient_context.rs  (+2 more)
tests/entities/: customer.rs  mod.rs  order.rs  profile.rs  task.rs  user.rs  user_document.rs
tests/es_query_tests/: entity_ty.rs  entity_ty_prefix.rs  mod.rs  no_params.rs  prefix.rs  test_with_entity_ty.rs  test_with_entity_ty_id_ty.rs  test_with_entity_ty_id_ty_prefix.rs  test_with_entity_ty_prefix.rs  test_with_id_ty.rs  test_with_id_ty_prefix.rs  test_with_none.rs  test_with_prefix.rs
tests/user/: entity.rs  error.rs  repo.rs
