[package]
name = "es-entity"
description = "Event Sourcing Entity Framework"
repository = "https://github.com/GaloyMoney/es-entity"
documentation = "https://docs.rs/es-entity"
version = "0.9.2-dev"
edition = "2024"
license = "Apache-2.0"
categories = ["data-structures", "database"]

[profile.mdbook-test]
inherits = "dev"

[features]

fail-on-warnings = []
tracing-context = ["dep:tracing", "dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk"]
graphql = ["es-entity-macros/graphql", "dep:async-graphql", "dep:base64"]
event-context = ["es-entity-macros/event-context", "event-context-enabled"]
event-context-enabled = ["es-entity-macros/event-context-enabled"]
json-schema = ["dep:schemars"]
sim-time = [ "dep:sim-time" ]
mdbook-test = ["dep:tokio", "dep:anyhow"]

[dependencies]
es-entity-macros = { workspace = true }
sim-time = { workspace = true, optional = true }

base64 = { workspace = true, optional = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono =  { workspace = true }
serde =  { workspace = true }
serde_json =  { workspace = true }
derive_builder = { workspace = true }
uuid = { workspace = true }
im = { workspace = true }
pin-project = { workspace = true }
async-graphql = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }

# For book tests
tokio = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[workspace]
resolver = "2"
members = [
  "es-entity-macros",
  "sim-time",
]

[workspace.dependencies]

es-entity-macros = { path = "es-entity-macros", version = "0.9.2-dev" }
sim-time = { path = "sim-time", version = "0.9.2-dev" }

anyhow = "1.0.98"
async-graphql = { version = "7.0.17", default-features = false }
async-trait = "0.1.88"
base64 = { version = "0.22.1" }
chrono = { version = "0.4.41", features = ["clock", "serde"], default-features = false }
derive_builder = "0.20.1"
schemars = { version = "1.0", features = ["uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json" ] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0"
uuid = { version = "1.18", features = ["serde", "v7"] }
im = { version = "15.1.0", features = ["serde"] }
pin-project = "1.1.10"
tracing = { version = "0.1.41", default-features = false }
tracing-opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry = { version = "0.30.0", default-features = false }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
