[package]
name = "es-entity-macros"
description = "Proc macros for es-entity"
repository = "https://github.com/GaloyMoney/cala"
version = "0.7.18-dev"
edition = "2024"
license = "Apache-2.0"
categories = ["data-structures", "database"]

[features]

fail-on-warnings = []
graphql = []
event-context = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
syn = "2.0.104"
quote = "1.0.40"
darling = "0.20.11"
pluralizer = "0.5.0"
convert_case = "0.8.0"
regex = "1.11"
