[package]
name = "es-entity-macros"
description = "Proc macros for es-entity"
repository = "https://github.com/GaloyMoney/cala"
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"
categories = ["data-structures", "database"]

[features]

fail-on-warnings = []
graphql = []
event-context = ["event-context-enabled"]
event-context-enabled = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
darling = "0.21"
pluralizer = "0.5"
convert_case = "0.8"
regex = "1.11"
