[package]
name = "es-entity-time"
version = "0.10.9-dev"
edition = "2021"
description = "Time abstraction for es-entity with support for simulated time"
license = "Apache-2.0"

[features]

fail-on-warnings = []
sqlx = ["dep:sqlx"]

[dependencies]
chrono = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
pin-project = { workspace = true }

sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
